--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@workspace/auth": "workspace:*",
+    "@workspace/backend": "workspace:*",
+    "@convex-dev/better-auth": "^0.7.11",
     "@workspace/ui": "workspace:*",
+    "better-auth": "1.2.12",
     "convex": "^1.25.4",
     "lucide-react": "^0.475.0",
     "next": "^15.2.3",
