--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,16 +12,18 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@workspace/backend": "workspace:*",
     "@convex-dev/better-auth": "^0.7.11",
+    "@workspace/backend": "workspace:*",
     "@workspace/ui": "workspace:*",
     "better-auth": "1.2.12",
     "convex": "^1.25.4",
+    "convex-helpers": "^0.1.100",
     "lucide-react": "^0.475.0",
     "next": "^15.2.3",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sonner": "^2.0.6"
   },
   "devDependencies": {
     "@types/node": "^20",
