--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,10 +19,12 @@
     "convex": "^1.25.4",
     "convex-helpers": "^0.1.100",
     "lucide-react": "^0.475.0",
+    "mapbox-gl": "^3.13.0",
     "next": "^15.2.3",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-map-gl": "^8.0.4",
     "sonner": "^2.0.6",
     "use-debounce": "^10.0.5"
   },
