--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-map-gl": "^8.0.4",
+    "react-timezone-select": "^3.2.8",
     "sonner": "^2.0.6",
     "use-debounce": "^10.0.5"
   },
