--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,9 @@
   },
   "dependencies": {
     "@convex-dev/better-auth": "^0.7.11",
+    "@tiptap/extension-placeholder": "^3.0.7",
+    "@tiptap/react": "^3.0.7",
+    "@tiptap/starter-kit": "^3.0.7",
     "@workspace/backend": "workspace:*",
     "@workspace/ui": "workspace:*",
     "better-auth": "1.2.12",
