--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,13 @@
   },
   "dependencies": {
     "@convex-dev/better-auth": "^0.7.11",
+    "@tiptap/extension-image": "^3.0.8",
+    "@tiptap/extension-link": "^3.0.8",
     "@tiptap/extension-placeholder": "^3.0.7",
+    "@tiptap/extension-task-item": "^3.0.8",
+    "@tiptap/extension-task-list": "^3.0.8",
+    "@tiptap/extension-text-align": "^3.0.8",
+    "@tiptap/extension-underline": "^3.0.8",
     "@tiptap/react": "^3.0.7",
     "@tiptap/starter-kit": "^3.0.7",
     "@workspace/backend": "workspace:*",
