--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -20,6 +20,7 @@
     "@convex-dev/resend": "^0.1.7",
     "@react-email/components": "^0.3.2",
     "@react-email/render": "^1.1.3",
+    "@workspace/email-engine": "workspace:*",
     "better-auth": "1.2.12",
     "convex": "^1.25.4",
     "react": "^19.0.0"
